feat: Add Rust program for Solidity contract generating

--- a/aptos/Cargo.toml
+++ b/aptos/Cargo.toml
@@ -6,7 +6,8 @@ members = [
     "light-client",
     "aptos-programs",
     "proof-server",
-    "solidity/script",
+    "solidity/fixture-generator",
+    "solidity/contracts-generator",
 ]
 
 [workspace.dependencies]
