--- a/aptos/solidity/contracts-generator/Cargo.toml
+++ b/aptos/solidity/contracts-generator/Cargo.toml
@@ -10,4 +10,7 @@ path = "src/bin/main.rs"
 [dependencies]
 anyhow = "1.0.86"
 log = "0.4.21"
+home = "0.5.9"
+tempfile = "3.9.0"
 sphinx-sdk = { workspace = true }
+sphinx-prover = { workspace = true }
