feat: Solidity verification of light client proofs with Plonk (#28)
* feat: Add scaffolding for Plonk verification in Solidity

* feat: Add Plonk contract

* tests: Add more negative Solidity testing

* feat: Add Rust program for Solidity contract generating

* chore: Update Cargo.lock

* chore: Update Plonk contract according to 'e48c01ec' tag of Sphinx

* chore: Formatting

* feat: Introduce downloading from our AWS private bucket

* feat: Update Foundry project to use sphinx-contracts dependency

* chore: Rename SP1 -> Sphinx

--- a/aptos/Cargo.toml
+++ b/aptos/Cargo.toml
@@ -6,6 +6,7 @@ members = [
     "light-client",
     "aptos-programs",
     "proof-server",
+    "solidity/fixture-generator",
 ]
 
 [workspace.dependencies]
@@ -49,6 +50,7 @@ sphinx-derive = { git = "ssh://git@github.com/lurk-lab/sphinx", branch = "plonk"
 sphinx-sdk = { git = "ssh://git@github.com/lurk-lab/sphinx", branch = "plonk", features = ["plonk"] }
 sphinx-zkvm = { git = "ssh://git@github.com/lurk-lab/sphinx", branch = "plonk" }
 sphinx-helper = { git = "ssh://git@github.com/lurk-lab/sphinx", branch = "plonk" }
+sphinx-prover = { git = "ssh://git@github.com/lurk-lab/sphinx", branch = "plonk" }
 tokio = "1.37"
 tokio-stream = "0.1"
 
