--- a/.github/workflows/bump-version-PR.yml
+++ b/.github/workflows/bump-version-PR.yml
@@ -48,12 +48,12 @@ jobs:
             VERSION=${{ inputs.version }}
             BASE_BRANCH="release/$BASE_VERSION_SHORT"
             PR_BRANCH="${{ inputs.type }}/${{ inputs.version }}"
-            git checkout ${{ env.PR_BRANCH }}
+            git checkout $PR_BRANCH
           else
             VERSION=$BASE_VERSION
             BASE_BRANCH="main"
             PR_BRANCH="release/$BASE_VERSION_SHORT"
-            git checkout -b ${{ env.PR_BRANCH }}
+            git checkout -b $PR_BRANCH
           fi
 
           echo "BASE_BRANCH=$BASE_BRANCH" | tee -a $GITHUB_ENV
