--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -4,7 +4,7 @@ on:
   merge_group:
   push:
     branches:
-      - "main"
+      - "dev"
   pull_request:
     types: [ opened, synchronize, reopened, ready_for_review ]
 
