--- a/.github/workflows/bump-version-PR.yml
+++ b/.github/workflows/bump-version-PR.yml
@@ -46,13 +46,13 @@ jobs:
           BASE_VERSION="${BASE_VERSION_SHORT}.0"
           if [[ "${{ inputs.type }}" == "hotfix" ]]; then
             VERSION=${{ inputs.version }}
-            BASE_BRANCH="release/$BASE_VERSION_SHORT"
-            PR_BRANCH="${{ inputs.type }}/${{ inputs.version }}"
+            BASE_BRANCH="release/v$BASE_VERSION_SHORT"
+            PR_BRANCH="${{ inputs.type }}/v${{ inputs.version }}"
             git checkout $PR_BRANCH
           else
             VERSION=$BASE_VERSION
             BASE_BRANCH="dev"
-            PR_BRANCH="release/$BASE_VERSION_SHORT"
+            PR_BRANCH="release/v$BASE_VERSION_SHORT"
             git checkout -b $PR_BRANCH
           fi
 
@@ -105,7 +105,7 @@ jobs:
             fi
           done <<< "$members"
         working-directory: ${{ github.workspace }}/aptos
-        
+
       - name: Commit changes
         run: |
           git add .
@@ -119,7 +119,7 @@ jobs:
           cat << 'EOF' > body.md
           This is an automated release PR for version `${ env.VERSION }}`.
 
-          On merge, this will trigger the [release publish workflow](${{ github.server_url }}/${{ github.repository }}/actions/workflows/tag-release.yml), which will upload a new GitHub release with tag `${{ env.VERSION }}`.
+          On merge, this will trigger the [release publish workflow](${{ github.server_url }}/${{ github.repository }}/actions/workflows/tag-release.yml), which will upload a new GitHub release with tag `v${{ env.VERSION }}`.
 
           [Workflow run](${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }})
           EOF
