feat: Final docs pass
- Add security.md page
- Update all the bench commands
- Combine all the benchmarking variables (RUSTFLAGS etc) to be equal
- Pin toolchain to nightly-2024-05-31 (current nightly is unfortunately
not working for the LC)
- Minor fixes to proof_server.rs
- General minor changes over all the docs

--- a/.github/actions/setup/action.yml
+++ b/.github/actions/setup/action.yml
@@ -14,13 +14,15 @@ runs:
     - name: Set env
       shell: bash
       run: |
-        echo "RUSTFLAGS=${{env.RUSTFLAGS}} --cfg tokio_unstable" | tee -a $GITHUB_ENV
+        echo "RUSTFLAGS=${{env.RUSTFLAGS}} --cfg tokio_unstable -C opt-level=3" | tee -a $GITHUB_ENV
         echo "RUST_LOG=info" | tee -a $GITHUB_ENV
     - uses: actions/setup-go@v5
       with:
         go-version: '1.22'
         cache-dependency-path: "**/go.sum"
-    - uses: dtolnay/rust-toolchain@stable
+    - uses: dtolnay/rust-toolchain@master
+      with:
+        toolchain: nightly-2024-05-31
     - uses: Swatinem/rust-cache@v2
       with:
         workspaces: "aptos -> target"
