fix: Add `SHARD_BATCH_SIZE=0` to commands

--- a/aptos/light-client/Makefile
+++ b/aptos/light-client/Makefile
@@ -4,6 +4,7 @@ benchmark:
 	@read -p "Enter benchmark name: " bench; \
 	RUST_LOG="debug" \
 	RUSTFLAGS="--cfg tokio_unstable -C target-cpu=native -C opt-level=3" \
+    SHARD_BATCH_SIZE=0 \
 	cargo +nightly-2024-05-31 bench --features aptos --bench $$bench
 
 BENCH ?= e2e
@@ -11,4 +12,5 @@ BENCH ?= e2e
 bench-ci:
 	RUST_LOG="info" \
 	RUSTFLAGS="--cfg tokio_unstable -C target-cpu=native -C opt-level=3" \
+    SHARD_BATCH_SIZE=0 \
 	cargo +nightly-2024-05-31 bench --features aptos --bench $(BENCH)
