chore: prepare release
Signed-off-by: Thomas Chataigner <tom.chataigner@yahoo.fr>

--- a/aptos/programs/benchmarks/signature-verification/Cargo.toml
+++ b/aptos/programs/benchmarks/signature-verification/Cargo.toml
@@ -6,8 +6,8 @@ edition = "2021"
 
 [dependencies]
 aptos-lc-core = { path = "../../../core", package = "aptos-lc-core", default-features = false }
-sphinx-derive = { git = "ssh://git@github.com/lurk-lab/sphinx", branch = "dev" }
-sphinx-zkvm = { git = "ssh://git@github.com/lurk-lab/sphinx", branch = "dev" }
+sphinx-derive = { git = "ssh://git@github.com/lurk-lab/sphinx", tag = "v1.0.0" }
+sphinx-zkvm = { git = "ssh://git@github.com/lurk-lab/sphinx", tag = "v1.0.0" }
 
 [patch.crates-io]
 # Sphinx patch
