--- a/ethereum/Cargo.toml
+++ b/ethereum/Cargo.toml
@@ -4,7 +4,10 @@ resolver = "2"
 members = ["core", "ethereum-programs", "light-client"]
 
 [workspace.dependencies]
+anyhow = "1.0.86"
 glob = "0.3.1"
+getset = "0.1.2"
+thiserror = "1.0.61"
 # Crypto dependencies
 bls12_381 = { git = "https://github.com/lurk-lab/bls12_381.git", branch = "zkvm" }
 # Sphinx dependencies
