--- a/aptos/proof-server/Cargo.toml
+++ b/aptos/proof-server/Cargo.toml
@@ -2,6 +2,7 @@
 name = "proof-server"
 version = "1.0.0"
 edition = "2021"
+license-file = "../LICENSE.md"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
