--- a/aptos/core/Cargo.toml
+++ b/aptos/core/Cargo.toml
@@ -2,7 +2,7 @@
 name = "aptos-lc-core"
 version = "1.0.0"
 edition = "2021"
-license = "MIT OR Apache-2.0"
+license-file = "../LICENSE.md"
 homepage = "https://github.com/wormhole-foundation/example-zk-light-clients"
 repository = "https://github.com/wormhole-foundation/example-zk-light-clients"
 
