--- a/aptos/programs/inclusion/Cargo.toml
+++ b/aptos/programs/inclusion/Cargo.toml
@@ -3,6 +3,7 @@
 version = "1.0.0"
 name = "inclusion-program"
 edition = "2021"
+license-file = "../../LICENSE.md"
 
 [dependencies]
 aptos-lc-core = { path = "../../core", package = "aptos-lc-core", default-features = false }
