--- a/ethereum/core/Cargo.toml
+++ b/ethereum/core/Cargo.toml
@@ -8,6 +8,7 @@ repository = "https://github.com/wormhole-foundation/example-zk-light-clients"
 
 [dependencies]
 anyhow = { workspace = true }
-bls12_381 = { workspace = true }
+bls12_381 = { workspace = true, features = ["experimental"] }
 getset = { workspace = true }
+sha2 = { workspace = true }
 thiserror = { workspace = true }
