--- a/ethereum/Cargo.toml
+++ b/ethereum/Cargo.toml
@@ -12,14 +12,18 @@ repository = "https://github.com/lurk-lab/zk-light-clients"
 anyhow = "1.0.86"
 clap = "4.5.8"
 env_logger = "0.11.3"
+ethereum-types = "0.14.1"
 glob = "0.3.1"
 getset = "0.1.2"
 log = "0.4.22"
 reqwest = "0.12.5"
 serde = "1.0.203"
 sha2 = "0.9"
+ssz_types = "0.6"
 thiserror = "1.0.61"
 tokio = "1.38.0"
+tree_hash = "0.6"
+tree_hash_derive = "0.6"
 # Crypto dependencies
 bls12_381 = { git = "https://github.com/lurk-lab/bls12_381.git", branch = "zkvm" }
 # Sphinx dependencies
