--- a/deny.toml
+++ b/deny.toml
@@ -146,10 +146,10 @@ default = "deny"
 confidence-threshold = 0.8
 # Allow 1 or more licenses on a per-crate basis, so that particular licenses
 # aren't accepted for every possible crate as with the normal allow list
-# TODO: This doesn't work, needs fix
 exceptions = [
     # Each entry is the crate and version constraint, and its specific allow list.
     { allow = ["BUSL-1.1"], crate = "aptos-lc" },
+    { allow = ["BUSL-1.1"], crate = "aptos-lc-core" },
     { allow = ["BUSL-1.1"], crate = "aptos-programs" },
     { allow = ["BUSL-1.1"], crate = "fixture-generator" },
     { allow = ["BUSL-1.1"], crate = "proof-server" },
