ci: Use `ssh-key` input for `cargo-deny-action`

--- a/deny.toml
+++ b/deny.toml
@@ -90,7 +90,7 @@ ignore = [
 # If this is false, then it uses a built-in git library.
 # Setting this to true can be helpful if you have special authentication requirements that cargo-deny does not support.
 # See Git Authentication for more information about setting up git authentication.
-#git-fetch-with-cli = true
+git-fetch-with-cli = true
 
 # This section is considered when running `cargo deny check licenses`
 # More documentation for the licenses section can be found here:
