ci: Add `cargo-deny` workflow (#79)
* ci: Add `cargo-deny` workflow (WIP)

* chore: use workspace dependencies

* chore: Refactor uneeded dependencies in aptos core Cargo.toml

- Removed `move-core-types` from workspace dependencies and the aptos feature in Cargo.toml file
- Stripped `reqwest` from the dev-dependencies within the aptos/core module

* fix: update deny.toml exceptions

- Modified various Cargo.toml files within the aptos project to standardize the `edition` field and reference the workspace.
- Added the "BUSL-1.1" license to multiple packages throughout the aptos codebase, including `proof-server`, `aptos-lc-core`, `aptos-programs`, `fixture-generator`, and `light-client`.
- Updated the deny.toml file, removing redundant sections and updating the list of exceptions to allow `aptos-lc-core` to use the "BUSL-1.1" license.
- Set edition 2021 in the workspace package configuration within the main aptos project's Cargo.toml.

* chore: add exception for number_range

* ci: fix deny action

* ci: Use `ssh-key` input for `cargo-deny-action`

* Test regular `cargo-deny` CLI

* Ignore `aptos` advisories

---------

Co-authored-by: François Garillot <francois@garillot.net>

--- a/aptos/core/Cargo.toml
+++ b/aptos/core/Cargo.toml
@@ -1,10 +1,9 @@
 [package]
 name = "aptos-lc-core"
 version = "1.0.0"
-edition = "2021"
-license = "MIT OR Apache-2.0"
-homepage = "https://github.com/wormhole-foundation/example-zk-light-clients"
-repository = "https://github.com/wormhole-foundation/example-zk-light-clients"
+edition = { workspace = true }
+repository = { workspace = true }
+license = "BUSL-1.1"
 
 [dependencies]
 anyhow = { workspace = true }
@@ -31,7 +30,6 @@ aptos-temppath = { workspace = true, optional = true }
 aptos-types = { workspace = true, optional = true }
 aptos-vm = { workspace = true, optional = true }
 aptos-vm-genesis = { workspace = true, optional = true }
-move-core-types = { workspace = true, optional = true }
 # Versions to fit aptos crate
 rand = { workspace = true, optional = true }
 rand_core = { workspace = true, optional = true }
@@ -39,7 +37,6 @@ rand_core = { workspace = true, optional = true }
 [dev-dependencies]
 cfg-if = { workspace = true }
 proptest = { workspace = true }
-reqwest = { workspace = true, features = ["blocking"] }
 
 [features]
 default = []
@@ -54,7 +51,6 @@ aptos = [
     "dep:aptos-types",
     "dep:aptos-vm",
     "dep:aptos-vm-genesis",
-    "dep:move-core-types",
     "dep:rand",
     "dep:rand_core"
 ]
