--- a/aptos/proof-server/Cargo.toml
+++ b/aptos/proof-server/Cargo.toml
@@ -1,7 +1,9 @@
 [package]
 name = "proof-server"
 version = "1.0.0"
-edition = "2021"
+edition = { workspace = true }
+license = "BUSL-1.1"
+repository = { workspace = true }
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
