--- a/aptos/solidity/fixture-generator/Cargo.toml
+++ b/aptos/solidity/fixture-generator/Cargo.toml
@@ -1,7 +1,10 @@
 [package]
 version = "1.0.1"
 name = "fixture-generator"
-edition = "2021"
+edition = { workspace = true }
+license = "BUSL-1.1"
+repository = { workspace = true }
+
 
 [[bin]]
 name = "generate-fixture"
@@ -11,8 +14,8 @@ path = "src/bin/main.rs"
 sphinx-sdk = { workspace = true }
 sphinx-prover = {workspace = true }
 aptos-lc = { path = "../../light-client", features = ["aptos"] }
-serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
-serde = { version = "1.0", default-features = false, features = ["derive"] }
-clap = { version = "4.0", features = ["derive", "env"] }
-tracing = "0.1.40"
-alloy-sol-types = "0.7.2"
+serde_json = { workspace = true, features = ["alloc"] }
+serde = { workspace = true, features = ["derive"] }
+clap = { workspace = true, features = ["derive", "env"] }
+tracing = { workspace = true }
+alloy-sol-types = { workspace = true }
