--- a/aptos/aptos-programs/Cargo.toml
+++ b/aptos/aptos-programs/Cargo.toml
@@ -1,9 +1,9 @@
 [package]
 name = "aptos-programs"
-version = "1.1.0"
+version = "1.0.0"
 edition = { workspace = true }
 repository = { workspace = true }
-license = { workspace = true }
+license = "BUSL-1.1"
 
 [build-dependencies]
 glob = { workspace = true }
