--- a/aptos/core/Cargo.toml
+++ b/aptos/core/Cargo.toml
@@ -1,9 +1,9 @@
 [package]
 name = "aptos-lc-core"
-version = "1.1.0"
+version = "1.0.0"
 edition = { workspace = true }
 repository = { workspace = true }
-license = { workspace = true }
+license = "BUSL-1.1"
 
 [dependencies]
 anyhow = { workspace = true }
