--- a/aptos/light-client/Cargo.toml
+++ b/aptos/light-client/Cargo.toml
@@ -1,9 +1,9 @@
 [package]
 name = "aptos-lc"
-version = "1.1.0"
+version = "1.0.0"
 edition = { workspace = true }
 repository = { workspace = true }
-license = { workspace = true }
+license = "BUSL-1.1"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
