--- a/aptos/proof-server/Cargo.toml
+++ b/aptos/proof-server/Cargo.toml
@@ -1,8 +1,8 @@
 [package]
 name = "proof-server"
-version = "1.1.0"
+version = "1.0.0"
 edition = { workspace = true }
-license = { workspace = true }
+license = "BUSL-1.1"
 repository = { workspace = true }
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
