--- a/aptos/Cargo.toml
+++ b/aptos/Cargo.toml
@@ -11,6 +11,7 @@ members = [
 
 [workspace.package]
 edition = "2021"
+license = "BUSL-1.1"
 repository = "https://github.com/lurk-lab/zk-light-clients"
 
 [workspace.dependencies]
