--- a/aptos/proof-server/Cargo.toml
+++ b/aptos/proof-server/Cargo.toml
@@ -2,7 +2,7 @@
 name = "proof-server"
 version = "1.0.0"
 edition = { workspace = true }
-license = "BUSL-1.1"
+license = { workspace = true }
 repository = { workspace = true }
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
