--- a/ethereum/ethereum-programs/Cargo.toml
+++ b/ethereum/ethereum-programs/Cargo.toml
@@ -1,8 +1,9 @@
 [package]
 name = "ethereum-programs"
 version = "0.1.0"
-edition = "2021"
-license = "Apache-2.0"
+edition = { workspace = true }
+repository = { workspace = true }
+license = { workspace = true }
 
 [build-dependencies]
 glob = { workspace = true }
