--- a/ethereum/light-client/Cargo.toml
+++ b/ethereum/light-client/Cargo.toml
@@ -1,8 +1,9 @@
 [package]
 name = "ethereum-lc"
 version = "0.1.0"
-edition = "2021"
-license = "Apache-2.0"
+edition = { workspace = true }
+repository = { workspace = true }
+license = { workspace = true }
 
 [dependencies]
 anyhow = { workspace = true }
